--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,14 +14,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: '16.x'
 
       - uses: actions/checkout@master
         name: Checkout
 
       - name: Install dependencies
         run: |
-          npm install
+          npm ci
 
       - name: Run checks
         run: |
