--- a/package.json
+++ b/package.json
@@ -4,22 +4,54 @@
   "description": "Личный проект «Мишка» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "^0.1.11"
+    "autoprefixer": "10.4.4",
+    "browser-sync": "2.27.9",
+    "del": "6.0.0",
+    "gulp": "4.0.2",
+    "gulp-dart-sass": "1.0.2",
+    "gulp-htmlmin": "5.0.1",
+    "gulp-if": "3.0.0",
+    "gulp-libsquoosh": "1.1.2",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "2.0.0",
+    "gulp-svg-sprite": "1.5.0",
+    "gulp-terser": "2.1.0",
+    "gulp-twig": "1.2.0",
+    "gulp-w3c-html-validator": "5.1.2",
+    "postcss": "8.4.12",
+    "postcss-csso": "6.0.0",
+    "postcss-custom-media": "8.0.0",
+    "postcss-import": "14.1.0",
+    "postcss-scss": "4.0.3",
+    "postcss-url": "10.1.3",
+    "stylelint": "14.6.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint .",
-    "lint": "npm run editorconfig",
-    "build": "echo 'Build task'",
-    "start": "echo 'Start task'"
+    "stylelint": "stylelint \"source/sass/**/*.scss\"",
+    "lint": "npm run editorconfig && npm run stylelint && gulp validateMarkup",
+    "build": "gulp build",
+    "start": "gulp"
   },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all",
+    "not < 0.2%"
+  ],
   "editorconfig-cli": [
     "*.json",
-    "source/*.html"
+    "*.js",
+    "source/**/*.html",
+    "source/**/*.twig",
+    "source/**/*.js",
+    "source/**/*.svg",
+    "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "^16"
+    "node": "16.x"
   },
   "type": "module"
 }
